# go/model_publisher.go
@@ -1,0 +1,21 @@
+/*
+ * Books API
+ *
+ * This web service offers information on books
+ *
+ * API version: 0.1.9
+ * Generated by: Swagger Codegen (https://github.com/swagger-api/swagger-codegen.git)
+ */
+package swagger
+
+type Publisher struct {
+	PublisherId string `json:"publisherId,omitempty"`
+
+	Name string `json:"name,omitempty"`
+
+	Country string `json:"country,omitempty"`
+
+	Founded string `json:"founded,omitempty"`
+
+	Genere string `json:"genere,omitempty"`
+}
